--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "highlight.js": "^9.12.0",
     "impress.js": "^0.6.0",
+    "material-ui": "^1.0.0-beta.2",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-lowlight": "^1.1.1",
+    "typeface-roboto": "0.0.31"
   },
   "devDependencies": {
     "react-scripts": "1.0.10"
