--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "highlight.js": "^9.12.0",
     "impress.js": "^0.6.0",
     "material-ui": "^1.0.0-beta.2",
+    "prismjs": "^1.6.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-lowlight": "^1.1.1",
+    "react-prism": "^4.3.0",
     "typeface-roboto": "0.0.31"
   },
   "devDependencies": {
