--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "highlight.js": "^9.12.0",
     "impress.js": "^0.6.0",
     "material-ui": "^1.0.0-beta.2",
     "prismjs": "^1.6.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-prism": "^4.3.0",
+    "typeface-gloria-hallelujah": "^0.0.31",
     "typeface-roboto": "0.0.31"
   },
   "devDependencies": {
