--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "react-scripts build && surge -d haaga-helia-react.surge.sh build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
